@@ -624,7 +624,7 @@ $_lang["public"] = 'Public';
 $_lang["publish_date"] = 'Publish Date';
 $_lang["publish_document"] = 'Publish document';
 $_lang["publish_events"] = 'Publish Events';
-$_lang["rb_base_dir_message"] = 'Enter the physical path to the resource directory. This setting is usually automatically generated. If you\'re using IIS, however, MODx may not be able to work the path out on it\'s own, causing the Resource Browser to show an error. In that case, you can enter the path to the images directory here (the path as you\'d see it in Windows Explorer). <b>NOTE:</b> The resource directory must contain the subfolders images, files, flash and media in order for the resource browser to function correctly.';
+$_lang["rb_base_dir_message"] = 'Enter the physical path to the resource directory. This setting is usually automatically generated. If you\'re using IIS, however, MODx may not be able to work the path out on its own, causing the Resource Browser to show an error. In that case, you can enter the path to the images directory here (the path as you\'d see it in Windows Explorer). <b>NOTE:</b> The resource directory must contain the subfolders images, files, flash and media in order for the resource browser to function correctly.';
 $_lang["rb_base_dir_title"] = 'Resource path:';
 $_lang["rb_base_url_message"] = 'Enter the virtual path to resource directory. This setting is usually automatically generated. If you\'re using IIS, however, MODx may not be able to work the URL out on it\'s own, causing the Resource Browser to show an error. In that case, you can enter the URL to the images directory here (the URL as you\'d enter it on Internet Explorer).';
 $_lang["rb_base_url_title"] = 'Resource URL:';
